--- a/src/app/bmx/components/participants-email/participants-email.component.html
+++ b/src/app/bmx/components/participants-email/participants-email.component.html
@@ -1,5 +1,5 @@
-<div style="width: 100%; display: flex; align-items: flex-start;">
-    <div style="border: hotpink solid 0px; width: 60%;">
+<div class="container">
+    <div class="email-container">
         <h2 style="margin: 20px;">Project TEST BrandMatrix Setup</h2>
         <!-- HEADER INPUTS -->
         <div style="display: flex;flex-direction: row;justify-content: space-evenly;">
@@ -32,7 +32,8 @@
                             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Templates</div>
                             <mat-form-field appearance="outline" style="margin-left: 20px;">
                                 <mat-label>Choose Template</mat-label>
-                                <mat-select class="selectLabels" [(ngModel)]="emailTemp" (selectionChange)="changeTemplate(emailTemp)">
+                                <mat-select class="selectLabels" [(ngModel)]="emailTemp"
+                                    (selectionChange)="changeTemplate(emailTemp)">
                                     <mat-option *ngFor="let EMAIL_TEMPLATE of EMAIL_TEMPLATES" [value]="EMAIL_TEMPLATE">
                                         {{EMAIL_TEMPLATE}}
                                     </mat-option>
@@ -61,9 +62,9 @@
 
         <!-- EMAIL EDITOR FORM -->
         <div style="margin-left: 20px;">
-            <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send Invite</div>
+            <div style="margin-bottom: 20px;font-size: 20px;color:#063074;font-weight: 800;">SEND INVITE</div>
             <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
-                <div style="color:#063074;font-size: 20px;margin-right: 20px;">From:</div>
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">FROM:</div>
                 <input style="width: 458px;" mat-input type="text" placeholder="director@brandinstitute.com"
                     [(ngModel)]="From">
             </div>
@@ -77,7 +78,7 @@
                     placeholder="creative@brandinstitue.com,director1@brandinstitue.com,direct..." [(ngModel)]="BCC">
             </div>
             <div style="display: flex;flex-direction: row;margin-bottom: 20px;justify-content: space-between;">
-                <div style="color:#063074;font-size: 20px;margin-right: 20px;">Subject:</div>
+                <div style="color:#063074;font-size: 20px;margin-right: 20px;">SUBJECT:</div>
                 <input style="width: 458px;" mat-input type="text" placeholder="Subject" [(ngModel)]="Subject">
             </div>
 
@@ -117,7 +118,7 @@
                             Send Invite
                         </button>
                         <button mat-raised-button style="background-color: #003180;color:white;margin:20px 0px"
-                        (click)="previewEmail()">
+                            (click)="previewEmail()">
                             Preview Invite
                         </button>
                     </div>
@@ -127,7 +128,7 @@
         </div>
 
     </div>
-    <div style="border: hotpink solid 0px; width: 35%;padding: 7% 0px 0px 22px">
+    <div class="participants-container">
         <div style="display: flex;flex-direction: row;margin-bottom: 20px; justify-content: space-between; ">
             <div style="color:#063074;font-size: 20px;margin-right: 20px;font-weight: 800;">To :</div>
         </div>
@@ -156,7 +157,7 @@
                         </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef="let row">
-                        <mat-checkbox (click)="$event.stopPropagation()"
+                        <mat-checkbox style="  margin-top: 9px;" (click)="$event.stopPropagation()"
                             (change)="$event ? selection.toggle(row) : null"
                             (change)="$event ? selectRow($event, row) : null" [checked]="selection.isSelected(row)">
                         </mat-checkbox>
@@ -167,7 +168,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.FirstName}} </td>
                 </ng-container>
-
+      
                 <ng-container matColumnDef="LastName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.LastName}} </td>
@@ -185,7 +186,8 @@
 
                 <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                    <td mat-cell title="{{getTitle(element.Status)}}" *matCellDef="let element"> {{element.Status}} </td>
+                    <td mat-cell title="{{getTitle(element.Status)}}" *matCellDef="let element"> {{element.Status}}
+                    </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -197,4 +199,3 @@
         </div>
     </div>
 </div>
-
