--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -197,11 +197,14 @@
                     </button>
                 </div>
                 <div class="button-name">
-                <button class="no-print" *ngIf="globalProjectName.length > 0"
-                    style="position: relative;z-index: 9999999999;     outline: none; bottom: 15px;"
-                    mat-raised-button class="project-name-global">
-                    PROJECT: {{globalDisplayName != ''? globalDisplayName: globalProjectName}}
-                </button></div>
+                  <button *ngIf="globalProjectName"
+                          class="no-print project-name-global"
+                          mat-raised-button
+                          style="position: relative; z-index: 9999999999; outline: none;">
+                    PROJECT: {{ globalDisplayName ? globalDisplayName : globalProjectName }}
+                  </button>
+                </div>
+
             </div>
         </div>
 
