--- a/src/app/bmx/components/project-reports/project-reports.component.scss
+++ b/src/app/bmx/components/project-reports/project-reports.component.scss
@@ -196,7 +196,7 @@
   background-color: white;
   border: solid 6px darkgray;
   @include BoxShadow(6);
-  color: #8831da;
+  color: #000;
 }
 
 ::ng-deep snack-bar-container {
