--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -1,3 +1,23 @@
+<div *ngIf="showModal" class="modal-background"></div>
+<div *ngIf="showModal" class="modal-content">
+  <button mat-icon-button class="close-button" aria-label="Close" (click)="closeModal()">
+    <mat-icon>close</mat-icon>
+  </button>
+  <label class="selectLabels">{{selectedDisplayName}}</label>
+  <label class="selectLabels">Change template name</label>
+  <div
+    style="width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; overflow-x: auto;">
+    <mat-form-field appearance="outline">
+      <input type="text" placeholder="Enter a new name" matInput [(ngModel)]="newTemplateName">
+    </mat-form-field>
+
+  </div>
+  <button mat-raised-button color="success" style="    background-color: #063074;
+  color: white;
+  width: 40%;;" (click)="saveNewName()">Save </button>
+</div>
+
+
 <div style="    position: relative;
 top: 5%;"
 >
@@ -17,7 +37,15 @@ top: 5%;"
             <td mat-cell *matCellDef="let element"> {{element.Created}} </td>
         </ng-container>
 
-
+        <ng-container matColumnDef="Name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button  (click)=" selectedDisplayName = element.displayName;openModal(); selectedTemplateName = element.templateName; templateName = element.templateName"
+                    aria-label="Example icon button with a home icon" >
+                    <mat-icon>edit</mat-icon>
+                </button>
+            </td>
+        </ng-container>
 
         <ng-container matColumnDef="Edit">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
