--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -13,6 +13,10 @@
     </div>
     <button mat-raised-button color="success" style=" background-color: #063074; color: white; width: 40%;;" (click)="saveNewName()">Save </button>
 </div>
+<div *ngIf="showDialog">
+    <app-survey-dialog (onConfirm)="deleteTemplate(nameToDialog)" (onCancel)="closeDialog()"
+        [dialogText]="'Are you sure you want to delete this template'"></app-survey-dialog>
+</div>
 <div style="position: relative; top: 10px">
     <mat-form-field style="padding-right: 20px" appearance="outline">
         <mat-label>Search</mat-label>
@@ -119,7 +123,7 @@
         <ng-container matColumnDef="Delete">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
             <td mat-cell *matCellDef="let element">
-                <button (click)="deleteTemplate(element.templateName)" mat-icon-button style="color: #bc488a;" aria-label="Example icon button with a home icon">
+                <button (click)="showDialogComponent(element.templateName)" mat-icon-button style="color: #bc488a;" aria-label="Example icon button with a home icon">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
