--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -162,7 +162,7 @@
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
         <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
-            matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
     </div>
@@ -198,13 +198,13 @@
             <div class="sm-section3-rkScale">
 
                 <div class="sm-row-box-rkScale">
-                    <div *ngIf="this.bmxItem.componentSettings[0].rankType !='dragAndDrop'">
+                    <div *ngIf="this.bmxItem.componentSettings[0].rankType !='dragAndDrop' && showBar">
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
                         <br>
                         <div
                             style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
 
-                            <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                            <input  [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
                                 [max]="this.rowsCount">
                             {{rankingScaleValue}}
                         </div>
@@ -251,7 +251,7 @@
                 <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
                     <mat-label>Copy & Paste TEST NAMES</mat-label>
                     <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
-                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"></textarea>
+                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput); "></textarea>
                 </mat-form-field>
                 <p style="margin-left: 30px; color: #757575;">
                     Add the names you want to test
@@ -328,13 +328,10 @@
 
     <!-- BUTTON-->
     <div class="sm-row-box-rkScale">
-        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
-            aria-label="ranking">
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"aria-label="ranking">
             <mat-icon>cancel</mat-icon><br>Cancel
         </button>
-        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false"
-            aria-label="ranking">
+        <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" [disabled]="false" aria-label="ranking">
             <mat-icon>check_circle</mat-icon><br> Done
         </button>
     </div>
