--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -396,7 +396,8 @@
     <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'"
         [dragula]="(dragRows)?'DRAGGABLE_ROW':(rankingType == 'dragAndDrop')?draggableBag:''"
-        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);" *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'">
+        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);"
+        *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" cdkDrag>
 
@@ -567,7 +568,7 @@
             </div>
         </div>
     </div>
-    <div class="scroller-style main-container"  *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
+    <div class="scroller-style main-container" *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index">
 
@@ -764,7 +765,7 @@
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag
             [ngClass]="(y == 0)?'ROW-CERO':''"> -->
 
-    <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
+    <div class="scroller-style main-container" *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'"  cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag>
@@ -862,6 +863,126 @@
                         <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
                               columnName.includes('Comments') != true && selectedCard == y &&
                               columnName.includes('name') != true"
+                            [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
+                            [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
+                            style="text-align: center;padding: 5px 4px;"
+                            [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
+
+
+                    </div>
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                </div>
+                <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown' && selectedCard == y"
+                    appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
+                    <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
+                    <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
+                        (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
+                        <mat-option *ngFor="let star of  testName.STARS; let x =  index" [value]="star.icon">
+                            {{star.icon}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="scroller-style main-container" *ngIf="this.bmxItem.componentSettings[0].rankType != 'dragAndDrop'">
+
+        <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;">
+
+            <div class="test-name-table" *ngIf="(y != 0)"
+                [style.touch-action]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'none':''"
+                [style.height]="(selectedCard == y && this.bmxItem.componentSettings[0].rankType == 'radio')?'200px':(selectedCard == y)?'':'45px'">
+
+                <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'&& y != 0  " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                height: 30px;
+                line-height: 30px;right: 7px;
+                position: absolute;animation: rubberBand 700ms ease-in  forwards;" mat-icon-button>{{y}}</button>
+
+
+                <button (click)="bmxItem.componentText[y]['RATE'] = 0;saveRadioColumValue('', y)"
+                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                height: 30px;
+                line-height: 30px;right: 7px;
+                position: absolute;animation: rubberBand 700ms ease-in  forwards;"
+                    mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
+                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+
+                <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
+                    <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
+                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                         color: white;
+                         min-width: 20px;
+                         line-height: 20px;
+                         padding: 2px 0px;
+                         position: absolute;
+                         animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
+                    </div>
+                </div>
+                <!-- <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button
+            style="background-color:#ee7f25 ;color: white;">{{y}}</button> -->
+
+                <div *ngFor="let columnName of columnsNames; let e =  index">
+                    <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+
+                    <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
+                    <div>
+
+                        <!-- IF ELSE TEMPLATE INPUTS  -->
+                        <div style="background-color: lightgray;">
+                            <div *ngIf="selectedCard == y" style="position: absolute;margin-top: 5px;"
+                                [style.left.px]="(e * 40)">
+                                <span *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
+                                    style="padding-right: 8px;">{{e - 1}}</span>
+                                <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
+                                    [name]="'rate' + y" [checked]="testName[columnName]"
+                                    (change)="saveRadioColumValue(columnName, y)">
+                            </div>
+                        </div>
+
+                        <img (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" class="row-box"
+                            style="width: 300px;" [src]="testName[columnName]"
+                            *ngIf=" bmxItem.componentSettings[1].isImageType && (y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
+                        <!-- TEXT_AREA COMMENTS-->
+                        <div style="display: flex;
+                    justify-content: center;">
+                            <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && selectedCard == y"
+                                [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 64px;width: 358px;font-size: 16px;border: 1px solid grey;
+                        animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin: 30px 0;" class="row-box"
+                                [(ngModel)]="testName[columnName]" placeholder="comments" rows="4" cols="50"></textarea>
+                        </div>
+
+
+                        <!-- TEST NAME CELL -->
+                        <!-- <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                          columnName.includes('Comments') != true &&
+                          columnName.includes('kata') != true &&
+                          columnName.includes('ratio') != true"
+                        [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
+                        [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
+                        style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p> -->
+                        <div style="display: flex;align-items: center;justify-content: space-evenly;">
+                            <mat-icon
+                                style="cursor: pointer;position: absolute;left: 60px;color: #324395;margin-top: -10px;"
+                                (click)="playTestNameSound(testName[columnName])" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) &&
+                                 displaySound">
+                                volume_up
+                            </mat-icon>
+                            <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                              columnName.includes('Comments') != true &&  columnName.includes('RATE') != true &&
+                              columnName.includes('kata') != true &&
+                              columnName.includes('ratio') != true"
+                                [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
+                                [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
+                                style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p>
+                        </div>
+
+
+                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                          columnName.includes('Comments') != true && selectedCard == y &&
+                          columnName.includes('name') != true"
                             [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                             [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
                             style="text-align: center;padding: 5px 4px;"
